--- a/cloud_formation.yaml
+++ b/cloud_formation.yaml
@@ -7,8 +7,8 @@ Resources:
   MyDbSecret:
     Type: AWS::SecretsManager::Secret
     Properties:
-      Name: manage-plans-db-secret
-      Description: Credentials for Manage Plans PostgreSQL DB
+      Name: powder-pool-api-db-secret
+      Description: Credentials for Powder Pool PostgreSQL DB
       GenerateSecretString:
         SecretStringTemplate: '{"username": "dbadmin", "password": "GreenEnergyIsCool", "jwt_secret": "GreenEnergyIsCool"}'
         GenerateStringKey: "password"
@@ -95,11 +95,11 @@ Resources:
           npm install -g yarn
           npm install -g pm2
           cd /home/ec2-user
-          git clone https://github.com/Jeancr123/manage_plans_server.git
-          cd manage_plans_server
+          git clone https://github.com/Jeancr123/powder_pool_api.git
+          cd powder_pool_api
           yarn install
 
-          SECRET_JSON=$(aws secretsmanager get-secret-value --secret-id manage-plans-db-secret --region ${AWS::Region} | jq -r .SecretString)
+          SECRET_JSON=$(aws secretsmanager get-secret-value --secret-id powder-pool-api-db-secret --region ${AWS::Region} | jq -r .SecretString)
           DB_USER=$(echo $SECRET_JSON | jq -r .username)
           DB_PASS=$(echo $SECRET_JSON | jq -r .password)
           DB_HOST="${PowderPoolDB.Endpoint.Address}"
